[gd_scene load_steps=21 format=2]

[ext_resource path="res://fonts/LLPIXEL3.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://textures/vesolje.jpg" type="Texture" id=2]
[ext_resource path="res://scripts/Gejm.gd" type="Script" id=3]
[ext_resource path="res://scripts/Kamera.gd" type="Script" id=4]
[ext_resource path="res://scripts/HUD.gd" type="Script" id=5]
[ext_resource path="res://scenes/Player.tscn" type="PackedScene" id=6]
[ext_resource path="res://sounds/kaselj.mp3" type="AudioStream" id=7]
[ext_resource path="res://sounds/lego_b.mp3" type="AudioStream" id=8]
[ext_resource path="res://sounds/lego_s.mp3" type="AudioStream" id=9]
[ext_resource path="res://sounds/kazu.mp3" type="AudioStream" id=10]
[ext_resource path="res://sounds/muzika.wav" type="AudioStream" id=11]
[ext_resource path="res://sounds/cincin.mp3" type="AudioStream" id=12]
[ext_resource path="res://sounds/lalala.mp3" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=5]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=1]
size = 140
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 42
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 40
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=7]
size = 24
font_data = ExtResource( 1 )

[node name="Gejm" type="Node2D"]
position = Vector2( -3, 0 )
script = ExtResource( 3 )
__meta__ = {
"_edit_horizontal_guides_": [ 60.0, 678.0, 45.0 ],
"_edit_vertical_guides_": [ 640.0, 60.0, 1210.0 ]
}

[node name="Vesolje" type="Sprite" parent="."]
modulate = Color( 1, 1, 1, 0.435294 )
position = Vector2( 1008, 649 )
rotation = 3.14159
scale = Vector2( 0.858253, 0.858253 )
texture = ExtResource( 2 )

[node name="redzone" type="Panel" parent="."]
visible = false
modulate = Color( 1, 0, 0, 0.411765 )
margin_left = -54.0
margin_top = -41.0
margin_right = 1318.0
margin_bottom = 761.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 6 )]
visible = false
position = Vector2( -43, 336 )
z_index = 10

[node name="Kamera" type="Camera2D" parent="."]
offset = Vector2( 640, 360 )
current = true
script = ExtResource( 4 )

[node name="novlajf_timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource( 5 )

[node name="serija_kamnov" type="Label" parent="HUD" groups=["VisibleInGame"]]
margin_left = 59.0
margin_top = 653.0
margin_right = 276.0
margin_bottom = 683.0
custom_fonts/font = SubResource( 5 )
text = "Serija: 00"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kontrole_glasba" type="Label" parent="HUD" groups=["VisibleInGame"]]
margin_left = 1122.0
margin_top = 652.0
margin_right = 1305.0
margin_bottom = 682.0
custom_fonts/font = SubResource( 5 )
text = "muzika"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kontrole_enter" type="Label" parent="HUD" groups=["VisibleInGame"]]
modulate = Color( 0.721569, 0.54902, 1, 1 )
margin_left = 1005.0
margin_top = 652.0
margin_right = 1106.0
margin_bottom = 682.0
custom_fonts/font = SubResource( 5 )
text = "[enter]"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kontrole_glasba2" type="Label" parent="HUD" groups=["VisibleInGame"]]
margin_left = 834.0
margin_top = 652.0
margin_right = 1017.0
margin_bottom = 682.0
custom_fonts/font = SubResource( 5 )
text = "prekini igro"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kontrole_enter2" type="Label" parent="HUD" groups=["VisibleInGame"]]
modulate = Color( 0.721569, 0.54902, 1, 1 )
margin_left = 717.0
margin_top = 652.0
margin_right = 818.0
margin_bottom = 682.0
custom_fonts/font = SubResource( 5 )
text = "[esc]"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="score_p1" type="Label" parent="HUD" groups=["VisibleInGame"]]
margin_left = 60.0
margin_top = 38.0
margin_right = 189.0
margin_bottom = 65.0
custom_fonts/font = SubResource( 4 )
text = "Score: 0000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lajf_p1" type="Label" parent="HUD" groups=["VisibleInGame"]]
margin_left = 62.0
margin_top = 69.0
margin_right = 148.0
margin_bottom = 96.0
custom_fonts/font = SubResource( 4 )
text = "Lajf: 0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="tajm" type="Label" parent="HUD" groups=["VisibleInGame"]]
margin_left = 1019.0
margin_top = 37.0
margin_right = 1208.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 4 )
text = "OOO"
align = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gejmover" type="Label" parent="HUD" groups=["VisibleInGameOver"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -425.0
margin_top = -132.0
margin_right = 425.0
margin_bottom = 38.0
custom_fonts/font = SubResource( 1 )
text = "GAME OVER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="igraj_btn" type="Button" parent="HUD" groups=["VisibleInGameOver"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -124.0
margin_top = 455.0
margin_right = -20.0
margin_bottom = 518.0
custom_fonts/font = SubResource( 2 )
text = "JA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="neigraj_btn" type="Button" parent="HUD" groups=["VisibleInGameOver"]]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 32.0
margin_top = 454.0
margin_right = 136.0
margin_bottom = 517.0
custom_fonts/font = SubResource( 2 )
text = "NE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rezultat" type="Label" parent="HUD" groups=["VisibleInGameOver"]]
margin_left = 432.0
margin_top = 126.0
margin_right = 850.0
margin_bottom = 208.0
custom_colors/font_color = Color( 0.54902, 0.956863, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "0000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="bise" type="Label" parent="HUD" groups=["VisibleInGameOver"]]
margin_left = 432.0
margin_top = 430.0
margin_right = 850.0
margin_bottom = 512.0
custom_colors/font_color = Color( 0.721569, 0.54902, 1, 1 )
custom_fonts/font = SubResource( 3 )
text = "Bi Å¡e?"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="muzika_ja" type="Button" parent="HUD" groups=["VisibleInGame"]]
margin_left = 1256.0
margin_top = 818.0
margin_right = 1344.0
margin_bottom = 854.0
custom_fonts/font = SubResource( 6 )
text = "MUZA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="gemovertajmer" type="Timer" parent="HUD"]
wait_time = 3.0
one_shot = true

[node name="kontrole_enter3" type="Label" parent="HUD" groups=["VisibleInGameOver"]]
modulate = Color( 0.447059, 0.447059, 0.447059, 1 )
margin_left = 540.0
margin_top = 569.0
margin_right = 741.0
margin_bottom = 599.0
custom_fonts/font = SubResource( 7 )
text = "Stisn  [esc]  za NE"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kontrole_enter5" type="Label" parent="HUD" groups=["VisibleInGameOver"]]
modulate = Color( 0.447059, 0.447059, 0.447059, 1 )
margin_left = 441.0
margin_top = 506.0
margin_right = 837.0
margin_bottom = 558.0
custom_fonts/font = SubResource( 2 )
text = "Stisn  [enter]  za JA"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="rekord" type="Label" parent="HUD" groups=["VisibleInGame"]]
margin_left = 548.0
margin_top = 39.0
margin_right = 732.0
margin_bottom = 88.0
custom_fonts/font = SubResource( 4 )
text = "0000"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="laser" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )
volume_db = -5.266
pitch_scale = 1.66

[node name="hahaha" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )
volume_db = -3.041

[node name="muzika" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="eksplozija_raketa" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = -3.359
pitch_scale = 0.88

[node name="eksplozija_mali_kamn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )
volume_db = 3.452
pitch_scale = 1.75

[node name="eksplozija_kamn" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )
volume_db = -2.633
pitch_scale = 0.8

[node name="metek_zadetek" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -2.633
pitch_scale = 1.35

[node name="deathmode" type="Timer" parent="."]

[node name="mali_deathmode" type="Timer" parent="."]
one_shot = true

[node name="zdravljica" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 13 )
volume_db = -3.041

[connection signal="raketa_dest" from="Player" to="." method="_on_Player_raketa_dest"]
[connection signal="timeout" from="novlajf_timer" to="." method="_on_novlajf_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="_on_HUD_start_game"]
[connection signal="pressed" from="HUD/igraj_btn" to="HUD" method="_on_igraj_btn_pressed"]
[connection signal="pressed" from="HUD/neigraj_btn" to="HUD" method="_on_neigraj_btn_pressed"]
[connection signal="pressed" from="HUD/muzika_ja" to="." method="_on_muzika_ja_pressed"]
[connection signal="timeout" from="HUD/gemovertajmer" to="." method="_on_gemovertajmer_timeout"]
[connection signal="timeout" from="deathmode" to="." method="_on_deathmode_timeout"]
[connection signal="timeout" from="mali_deathmode" to="." method="_on_mali_deathmode_timeout"]
